--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>hello</h1>
     <h2>this should be done soon</h2>
+
+    <footer>hosted using github pages</footer>
 </body>
 </html>
