--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 <body>
 	<div class="container">
         <nav class="pagelinks">
-            <a href="index.html"><img src="logo.svg" alt="Logo"></a>
+            <a href=""><img src="logo.svg" alt="Logo"></a>
             <ul class="innerlinks">
                 <li><a href="about.html">About</a></li>
                 <li><a href="about.html#experience">Experience</a></li>
@@ -57,47 +57,12 @@
         </div><!--end of right section-->
 
         <main>
-            <section class="hero">
-                <h1>HALFWAY</h1>
-                <p>There<span>WEB DEVELOPER</span></p>
-            </section><!--end of hero section-->
+            <section id="about">
 
-            <section id="projects">
-                <h2>Projects</h2>
-                <div class="projlist">
-                    <div class="proj proj1">
-                        <div class="projlinks">
-                            <a href="" target="_blank"><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i></a><span class="sr-only">github profile link</span>
-                            <a href="" target="_blank"><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i></a><span class="sr-only">github profile link</span>
-                        </div>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam at, ullam quod esse, saepe laboriosam totam tenetur aliquam eveniet, quia recusandae. Atque ipsum odio, quibusdam cum laborum nemo fugit dicta.
-                    </div><!--project 1 end-->
-                    <div class="proj proj2">
-                        <div class="projlinks">
-                            <a href="" target="_blank"><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i></a><span class="sr-only">github profile link</span>
-                        </div>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero, fugit, pariatur esse odio deleniti dicta a explicabo libero quod eaque voluptatem ipsam cupiditate maiores, quasi in vitae praesentium ex officia.
-                    </div><!--project 2 end-->
-                    <div class="proj proj3">
-                        <div class="projlinks">
-                            <a href="" target="_blank"><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i></a><span class="sr-only">github profile link</span>
-                        </div>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem sapiente inventore repellat aliquam illum voluptatum maiores est necessitatibus tempora amet impedit, voluptas atque, sequi illo nam corporis. Error, sint labore.
-                    </div><!--project 3 end-->
-                    <div class="proj proj4">
-                        <div class="projlinks">
-                            <a href="" target="_blank"><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i></a><span class="sr-only">github profile link</span>
-                        </div>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem sapiente inventore repellat aliquam illum voluptatum maiores est necessitatibus tempora amet impedit, voluptas atque, sequi illo nam corporis. Error, sint labore.
-                    </div><!--project 3 end-->
-                </div>
-            </section><!--end of projects section-->
+            </section>
+            <section id="experience">
 
-            <section id="contact">
-                <h2>Contact</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci deleniti eligendi maxime necessitatibus quo! Dolorem quas odit totam facilis! Minus facilis quod rem aliquam delectus ut quam, reprehenderit minima asperiores!</p>
-                <a href="mail:to" class="button">Email Me</a>
-            </section><!--end of contact section-->
+            </section>
         </main><!--end of main-->
 
         <footer>
