--- a/about.html
+++ b/about.html
@@ -36,9 +36,9 @@
                 <li><a class="button" href="">Resume</a></li>
             </ul>
             <ul class="hamburger" hidden="true">
-                <li><div class="line"></div></li>
-                <li><div class="line"></div></li>
-                <li><div class="line"></div></li>
+                <li><div class="bar"></div></li>
+                <li><div class="bar"></div></li>
+                <li><div class="bar"></div></li>
             </ul>
         </nav><!--end of navigation-->
 
@@ -58,10 +58,10 @@
 
         <main>
             <section id="about">
-
+                <h1>about me</h1>
             </section>
             <section id="experience">
-
+                <h2>experience</h2>
             </section>
         </main><!--end of main-->
 
@@ -70,7 +70,6 @@
                 <a href="https://www.discord.gg/rqVKvVe" target="_blank"><i class="fa-brands fa-discord fa-xl" aria-hidden="true"></i></a><span class="sr-only">discord server link</span>
                 <a href="https://github.com/PinetheApple" target="_blank"><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i></a><span class="sr-only">github profile link</span>
                 <a href="https://codepen.io/pinetheapple" target="_blank"><i class="fa-brands fa-codepen fa-xl" aria-hidden="true"></i></a><span class="sr-only">codepen account link</span>
-                <a href="https://fontawesome.com/" target="_blank"><i class="fa-brands fa-font-awesome fa-xl" aria-hidden="true"></i></a><span class="sr-only">fontawesome link</span>
             </section><!--connections-->
 			<section class="details">
 				<p><a href="" target="blank"><i class="fa-solid fa-code-fork" aria-hidden="true"></i> Github repository</a></p>
