--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                 <li><a href="about.html#experience">Experience</a></li>
                 <li><a href="index.html#projects">Projects</a></li>
                 <li><a href="index.html#contact">Contact</a></li>
-                <li><a class="button" href="">Resume</a></li>
+                <li><a class="button resume-btn" href="">Resume</a></li>
             </ul>
-            <ul class="hamburger" hidden="true">
-                <li><div class="line"></div></li>
-                <li><div class="line"></div></li>
-                <li><div class="line"></div></li>
+            <ul class="hamburger" hidden="true" type="button">
+                <li><div class="bar"></div></li>
+                <li><div class="bar"></div></li>
+                <li><div class="bar"></div></li>
             </ul>
         </nav><!--end of navigation-->
 
@@ -59,7 +59,7 @@
         <main>
             <section class="hero">
                 <h1>HALFWAY</h1>
-                <p>There<span>WEB DEVELOPER</span></p>
+                <p>There<span>NOT YET RESPONSIVE</span></p>
             </section><!--end of hero section-->
 
             <section id="projects">
@@ -68,7 +68,7 @@
                     <div class="proj proj1">
                         <div class="projlinks">
                             <a href="" target="_blank"><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i></a><span class="sr-only">github profile link</span>
-                            <a href="" target="_blank"><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i></a><span class="sr-only">github profile link</span>
+                            <a href="" target="_blank"><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i></a><span class="sr-only">website link</span>
                         </div>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam at, ullam quod esse, saepe laboriosam totam tenetur aliquam eveniet, quia recusandae. Atque ipsum odio, quibusdam cum laborum nemo fugit dicta.
                     </div><!--project 1 end-->
@@ -105,7 +105,6 @@
                 <a href="https://www.discord.gg/rqVKvVe" target="_blank"><i class="fa-brands fa-discord fa-xl" aria-hidden="true"></i></a><span class="sr-only">discord server link</span>
                 <a href="https://github.com/PinetheApple" target="_blank"><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i></a><span class="sr-only">github profile link</span>
                 <a href="https://codepen.io/pinetheapple" target="_blank"><i class="fa-brands fa-codepen fa-xl" aria-hidden="true"></i></a><span class="sr-only">codepen account link</span>
-                <a href="https://fontawesome.com/" target="_blank"><i class="fa-brands fa-font-awesome fa-xl" aria-hidden="true"></i></a><span class="sr-only">fontawesome link</span>
             </section><!--connections-->
 			<section class="details">
 				<p><a href="" target="blank"><i class="fa-solid fa-code-fork" aria-hidden="true"></i> Github repository</a></p>
