--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                 <li><a href="index.html#contact">Contact</a></li>
                 <li><a class="button resume-btn" href="">Resume</a></li>
             </ul>
-            <ul class="hamburger" hidden="true" type="button">
-                <li><div class="bar"></div></li>
-                <li><div class="bar"></div></li>
-                <li><div class="bar"></div></li>
-            </ul>
+            <div class="ham">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
         </nav><!--end of navigation-->
 
         <nav class="leftsection">
@@ -112,5 +112,7 @@
 			</section><!--details-->
         </footer><!--end of footer-->
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
