--- a/about.html
+++ b/about.html
@@ -27,19 +27,19 @@
 <body>
 	<div class="container">
         <nav class="pagelinks">
-            <a href=""><img src="logo.svg" alt="Logo"></a>
+            <a href="index.html"><img src="logo.svg" alt="Logo"></a>
             <ul class="innerlinks">
                 <li><a href="about.html">About</a></li>
                 <li><a href="about.html#experience">Experience</a></li>
                 <li><a href="index.html#projects">Projects</a></li>
                 <li><a href="index.html#contact">Contact</a></li>
-                <li><a class="button" href="">Resume</a></li>
+                <li><a class="button resume-btn" href="">Resume</a></li>
             </ul>
-            <ul class="hamburger" hidden="true">
-                <li><div class="bar"></div></li>
-                <li><div class="bar"></div></li>
-                <li><div class="bar"></div></li>
-            </ul>
+            <div class="ham">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
         </nav><!--end of navigation-->
 
         <nav class="leftsection">
@@ -77,5 +77,7 @@
 			</section><!--details-->
         </footer><!--end of footer-->
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
