responsive index page

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
         <main>
             <section class="hero">
-                <h1>HALFWAY</h1>
-                <p>There<span>NOT YET RESPONSIVE</span></p>
+                <h1>Jonathan Paul</h1>
+                <p>Student<span>Web Developer</span></p>
             </section><!--end of hero section-->
 
             <section id="projects">
@@ -70,6 +70,7 @@
                             <a href="" target="_blank"><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i></a><span class="sr-only">github profile link</span>
                             <a href="" target="_blank"><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i></a><span class="sr-only">website link</span>
                         </div>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est repellendus architecto tempore dolores tenetur adipisci quaerat assumenda. Beatae porro, similique rerum numquam voluptatum quia animi aperiam voluptate perferendis minima quaerat.
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam at, ullam quod esse, saepe laboriosam totam tenetur aliquam eveniet, quia recusandae. Atque ipsum odio, quibusdam cum laborum nemo fugit dicta.
                     </div><!--project 1 end-->
                     <div class="proj proj2">
@@ -95,7 +96,7 @@
 
             <section id="contact">
                 <h2>Contact</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci deleniti eligendi maxime necessitatibus quo! Dolorem quas odit totam facilis! Minus facilis quod rem aliquam delectus ut quam, reprehenderit minima asperiores!</p>
+                <p>Always happy to hear about what you think of this site or any project you're interested in showing me. Feel free to email or DM on discord :) </p>
                 <a href="mail:to" class="button">Email Me</a>
             </section><!--end of contact section-->
         </main><!--end of main-->
