separate css files for index and about page

--- a/about.html
+++ b/about.html
@@ -21,7 +21,8 @@
 		<script src="https://kit.fontawesome.com/2292cc943b.js" crossorigin="anonymous"></script>
 
 		<!-- external CSS link -->
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="styles/global.css">
+        <link rel="stylesheet" href="styles/about.css">
 </head>
 
 <body>
@@ -58,7 +59,7 @@
 
         <main>
             <section id="about">
-                <h1>about me</h1>
+                <img src="./images/favicon_porg.png" alt="profile image">
             </section>
             <section id="experience">
                 <h2>experience</h2>
