--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 		<script src="https://kit.fontawesome.com/2292cc943b.js" crossorigin="anonymous"></script>
 
 		<!-- external CSS link -->
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="styles/global.css">
+        <link rel="stylesheet" href="styles/index.css">
 </head>
 
 <body>
