--- a/about.html
+++ b/about.html
@@ -59,10 +59,10 @@
 
         <main>
             <section id="about">
-                <img src="./images/favicon_porg.png" alt="profile image">
+                <img src="./images/profile_picture.png" alt="profile image">
             </section>
             <section id="experience">
-                <h2>experience</h2>
+                <h2>Experience</h2>
             </section>
         </main><!--end of main-->
 
