about section info

--- a/about.html
+++ b/about.html
@@ -60,6 +60,13 @@
         <main>
             <section id="about">
                 <img src="./images/profile_picture.png" alt="profile image">
+                <section class="about_sec">
+                    <h3>About Me</h3>
+                    <p>Hello there. I'm Jonathan.</p>
+                    <p>I am skilled at object-oriented programming. I'm comfortable working with Java and Python.</p>
+                    <p>I'm currently pursuing a degree in Computer Science while learning random stuff off the internet like web development and computer networking.</p>
+                    <p>I'm looking to collaborate on web-related projects.</p>
+                </section>
             </section>
             <section id="experience">
                 <h2>Experience</h2>
