logo (placeholder most likely)

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
 	<div class="container">
         <nav class="pagelinks">
-            <a href="index.html"><img src="logo.svg" alt="Logo"></a>
+            <a href="index.html"><img src="images/logo.png" alt="Logo"></a>
             <ul class="innerlinks">
                 <li><a href="about.html">About</a></li>
                 <li><a href="about.html#experience">Experience</a></li>
