--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 <body>
 	<div class="container">
         <nav class="pagelinks">
-            <a href="index.html"><img src="logo.svg" alt="Logo"></a>
+            <a href="index.html"><img src="images/logo.png" alt="Logo"></a>
             <ul class="innerlinks">
                 <li><a href="about.html">About</a></li>
                 <li><a href="about.html#experience">Experience</a></li>
@@ -70,6 +70,7 @@
             </section>
             <section id="experience">
                 <h2>Experience</h2>
+                <p>Business Web Solutions- <span>Intern</span><time> (3 months)</time></p>
             </section>
         </main><!--end of main-->
 
