--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
 		<meta property="og:image" content=”https://github.com/PinetheApple/PinetheApple.github.io/blob/main/images/pineappleinspace.jpg”/>
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://PinetheApple.github.io"/>
+        <meta name="theme-color" content="#0d0d0d"/>
 
 		<title>Pine Space</title>
 
@@ -28,7 +29,7 @@
 <body>
 	<div class="container">
         <nav class="pagelinks">
-            <a href="index.html"><img src="images/logo.png" alt="Logo"></a>
+            <a href="index.html"><img src="images/logo.png" alt="Logo" height="36px" width="35px"></a>
             <ul class="innerlinks">
                 <li><a href="about.html">About</a></li>
                 <li><a href="about.html#experience">Experience</a></li>
@@ -45,9 +46,9 @@
 
         <nav class="leftsection">
             <ul>
-                <li><a href="https://www.discord.gg/rqVKvVe" target="_blank"><i class="fa-brands fa-discord fa-xl" aria-hidden="true"></i></a><span class="sr-only">discord server link</span></li>
-                <li><a href="https://github.com/PinetheApple" target="_blank"><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i></a><span class="sr-only">github profile link</span></li>
-                <li><a href="https://codepen.io/pinetheapple" target="_blank"><i class="fa-brands fa-codepen fa-xl" aria-hidden="true"></i></a><span class="sr-only">codepen account link</span></li>
+                <a href="https://www.discord.gg/rqVKvVe" target="_blank" aria-label="discord server link"><i class="fa-brands fa-discord fa-xl" aria-hidden="true"></i></a>
+                <a href="https://github.com/PinetheApple" target="_blank" aria-label="github profile link"><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i></a>
+                <a href="https://codepen.io/pinetheapple" target="_blank" aria-label="codepen account link"><i class="fa-brands fa-codepen fa-xl" aria-hidden="true"></i></a>
                 <li><div class="line"></div></li>
             </ul>
         </nav><!--end of left section-->
@@ -59,7 +60,7 @@
 
         <main>
             <section id="about">
-                <img src="./images/profile_picture.png" alt="profile image">
+                <img src="./images/profile_picture.png" alt="profile image" height="370px" width="369px">
                 <section class="about_sec">
                     <h3>About Me</h3>
                     <p>Hello there. I'm Jonathan.</p>
@@ -76,17 +77,17 @@
 
         <footer>
             <section class="connections">
-                <a href="https://www.discord.gg/rqVKvVe" target="_blank"><i class="fa-brands fa-discord fa-xl" aria-hidden="true"></i></a><span class="sr-only">discord server link</span>
-                <a href="https://github.com/PinetheApple" target="_blank"><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i></a><span class="sr-only">github profile link</span>
-                <a href="https://codepen.io/pinetheapple" target="_blank"><i class="fa-brands fa-codepen fa-xl" aria-hidden="true"></i></a><span class="sr-only">codepen account link</span>
+                <a href="https://www.discord.gg/rqVKvVe" target="_blank" aria-label="discord server link"><i class="fa-brands fa-discord fa-xl" aria-hidden="true"></i></a>
+                <a href="https://github.com/PinetheApple" target="_blank" aria-label="github profile link"><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i></a>
+                <a href="https://codepen.io/pinetheapple" target="_blank" aria-label="codepen account link"><i class="fa-brands fa-codepen fa-xl" aria-hidden="true"></i></a>
             </section><!--connections-->
 			<section class="details">
-				<p><a href="" target="blank"><i class="fa-solid fa-code-fork" aria-hidden="true"></i> Github repository</a></p>
+				<p><a href="https://github.com/PinetheApple/PinetheApple.github.io" target="_blank"><i class="fa-solid fa-code-fork" aria-hidden="true"></i> Github repository</a></p>
 				<small>Ⓒ Jonathan. No rights reserved.</small>
 			</section><!--details-->
         </footer><!--end of footer-->
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
