--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<meta property="og:image" content=”https://github.com/PinetheApple/PinetheApple.github.io/blob/main/images/pineappleinspace.jpg”/>
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://PinetheApple.github.io"/>
+        <meta name="theme-color" content="#0d0d0d"/>
 
 		<title>Pine Space</title>
 
@@ -28,7 +29,7 @@
 <body>
 	<div class="container">
         <nav class="pagelinks">
-            <a href="index.html"><img src="images/logo.png" alt="Logo"></a>
+            <a href="index.html"><img src="images/logo.png" alt="Logo" height="36px" width="35px"></a>
             <ul class="innerlinks">
                 <li><a href="about.html">About</a></li>
                 <li><a href="about.html#experience">Experience</a></li>
