resume and email links

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                 <li><a href="about.html#experience">Experience</a></li>
                 <li><a href="index.html#projects">Projects</a></li>
                 <li><a href="index.html#contact">Contact</a></li>
-                <li><a class="button resume-btn" href="">Resume</a></li>
+                <li><a class="button resume-btn" href="https://www.dropbox.com/s/j7rq8jbu6dgkftg/pine_resume.pdf?dl=1" download="jonathan_resume">Resume</a></li>
             </ul>
             <div class="ham">
                 <span class="bar"></span>
@@ -54,7 +54,7 @@
         </nav><!--end of left section-->
 
         <div class="rightsection">
-            <p class="rotate90"><a href="mailto:">pinespace889@gmail.com</a></p>
+            <p class="rotate90"><a href="mailto:pinespace889@gmail.com">pinespace889@gmail.com</a></p>
             <div class="line"></div>
         </div><!--end of right section-->
 
