--- a/index.html
+++ b/index.html
@@ -69,28 +69,31 @@
                 <div class="projlist">
                     <div class="proj proj1">
                         <div class="projlinks">
-                            <a href="" target="_blank"><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i></a><span class="sr-only">github profile link</span>
-                            <a href="" target="_blank"><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i></a><span class="sr-only">website link</span>
+                            <a href="" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square fa-xl" aria-label="website link" aria-hidden="true"></i></a>
+                            <a href="" target="_blank"><i class="fa-brands fa-github fa-xl" aria-label="github repository link" aria-hidden="true"></i></a>
                         </div>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est repellendus architecto tempore dolores tenetur adipisci quaerat assumenda. Beatae porro, similique rerum numquam voluptatum quia animi aperiam voluptate perferendis minima quaerat.
+                        <h4 class="proj_name">Old portfolio website</h4>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam at, ullam quod esse, saepe laboriosam totam tenetur aliquam eveniet, quia recusandae. Atque ipsum odio, quibusdam cum laborum nemo fugit dicta.
                     </div><!--project 1 end-->
                     <div class="proj proj2">
                         <div class="projlinks">
-                            <a href="" target="_blank"><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i></a><span class="sr-only">github profile link</span>
+                            <a href="" target="_blank"><i class="fa-brands fa-github fa-xl" aria-label="github repository link" aria-hidden="true"></i></a>
                         </div>
+                        <h4 class="proj_name">Discord Music Bot</h4>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero, fugit, pariatur esse odio deleniti dicta a explicabo libero quod eaque voluptatem ipsam cupiditate maiores, quasi in vitae praesentium ex officia.
                     </div><!--project 2 end-->
                     <div class="proj proj3">
                         <div class="projlinks">
-                            <a href="" target="_blank"><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i></a><span class="sr-only">github profile link</span>
+                            <a href="" target="_blank"><i class="fa-brands fa-github fa-xl" aria-label="github repository link" aria-hidden="true"></i></a>
                         </div>
+                        <h4 class="proj_name">Voice Control Application</h4>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem sapiente inventore repellat aliquam illum voluptatum maiores est necessitatibus tempora amet impedit, voluptas atque, sequi illo nam corporis. Error, sint labore.
                     </div><!--project 3 end-->
                     <div class="proj proj4">
                         <div class="projlinks">
-                            <a href="" target="_blank"><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i></a><span class="sr-only">github profile link</span>
+                            <a href="" target="_blank"><i class="fa-brands fa-github fa-xl" aria-label="github repository link" aria-hidden="true" aria-label="github repository link"></i></a>
                         </div>
+                        <h4 class="proj_name">Swapi website</h4>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem sapiente inventore repellat aliquam illum voluptatum maiores est necessitatibus tempora amet impedit, voluptas atque, sequi illo nam corporis. Error, sint labore.
                     </div><!--project 3 end-->
                 </div>
@@ -105,9 +108,9 @@
 
         <footer>
             <section class="connections">
-                <a href="https://www.discord.gg/rqVKvVe" target="_blank"><i class="fa-brands fa-discord fa-xl" aria-hidden="true"></i></a><span class="sr-only">discord server link</span>
-                <a href="https://github.com/PinetheApple" target="_blank"><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i></a><span class="sr-only">github profile link</span>
-                <a href="https://codepen.io/pinetheapple" target="_blank"><i class="fa-brands fa-codepen fa-xl" aria-hidden="true"></i></a><span class="sr-only">codepen account link</span>
+                <a href="https://www.discord.gg/rqVKvVe" target="_blank" aria-label="discord server link"><i class="fa-brands fa-discord fa-xl" aria-hidden="true"></i></a>
+                <a href="https://github.com/PinetheApple" target="_blank" aria-label="github profile link"><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i></a>
+                <a href="https://codepen.io/pinetheapple" target="_blank" aria-label="codepen account link"><i class="fa-brands fa-codepen fa-xl" aria-hidden="true"></i></a>
             </section><!--connections-->
 			<section class="details">
 				<p><a href="" target="blank"><i class="fa-solid fa-code-fork" aria-hidden="true"></i> Github repository</a></p>
