--- a/index.html
+++ b/index.html
@@ -73,28 +73,28 @@
                             <a href="" target="_blank"><i class="fa-brands fa-github fa-xl" aria-label="github repository link" aria-hidden="true"></i></a>
                         </div>
                         <h4 class="proj_name">Old portfolio website</h4>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam at, ullam quod esse, saepe laboriosam totam tenetur aliquam eveniet, quia recusandae. Atque ipsum odio, quibusdam cum laborum nemo fugit dicta.
+                        A simple responsive website built using HTML, CSS and Javascript hosted using github pages.
                     </div><!--project 1 end-->
                     <div class="proj proj2">
                         <div class="projlinks">
                             <a href="" target="_blank"><i class="fa-brands fa-github fa-xl" aria-label="github repository link" aria-hidden="true"></i></a>
                         </div>
                         <h4 class="proj_name">Discord Music Bot</h4>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero, fugit, pariatur esse odio deleniti dicta a explicabo libero quod eaque voluptatem ipsam cupiditate maiores, quasi in vitae praesentium ex officia.
+                        A discord music bot built using python (disnake.py) on an already existing base with some added functionality in the form of interactive buttons.
                     </div><!--project 2 end-->
                     <div class="proj proj3">
                         <div class="projlinks">
                             <a href="" target="_blank"><i class="fa-brands fa-github fa-xl" aria-label="github repository link" aria-hidden="true"></i></a>
                         </div>
                         <h4 class="proj_name">Voice Control Application</h4>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem sapiente inventore repellat aliquam illum voluptatum maiores est necessitatibus tempora amet impedit, voluptas atque, sequi illo nam corporis. Error, sint labore.
+                        A simple android application built on MIT App Inventor. Commands can be input by voice or by using touch controls. These are then updated and stored on Firebase.
                     </div><!--project 3 end-->
                     <div class="proj proj4">
                         <div class="projlinks">
                             <a href="" target="_blank"><i class="fa-brands fa-github fa-xl" aria-label="github repository link" aria-hidden="true" aria-label="github repository link"></i></a>
                         </div>
                         <h4 class="proj_name">Swapi website</h4>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem sapiente inventore repellat aliquam illum voluptatum maiores est necessitatibus tempora amet impedit, voluptas atque, sequi illo nam corporis. Error, sint labore.
+                        A single page web application that uses the Star Wars API (swapi) and generates random star wars characters with some information about them.
                     </div><!--project 3 end-->
                 </div>
             </section><!--end of projects section-->
