--- a/index.html
+++ b/index.html
@@ -69,29 +69,29 @@
                 <div class="projlist">
                     <div class="proj proj1">
                         <div class="projlinks">
-                            <a href="" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square fa-xl" aria-label="website link" aria-hidden="true"></i></a>
-                            <a href="" target="_blank"><i class="fa-brands fa-github fa-xl" aria-label="github repository link" aria-hidden="true"></i></a>
+                            <a href="https://pinetheapple.github.io/PinetheApple_v1.github.io/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square fa-xl" aria-label="website link" aria-hidden="true"></i></a>
+                            <a href="https://github.com/PinetheApple/PinetheApple_v1.github.io" target="_blank"><i class="fa-brands fa-github fa-xl" aria-label="github repository link" aria-hidden="true"></i></a>
                         </div>
                         <h4 class="proj_name">Old portfolio website</h4>
                         A simple responsive website built using HTML, CSS and Javascript hosted using github pages.
                     </div><!--project 1 end-->
                     <div class="proj proj2">
                         <div class="projlinks">
-                            <a href="" target="_blank"><i class="fa-brands fa-github fa-xl" aria-label="github repository link" aria-hidden="true"></i></a>
+                            <a href="https://github.com/PinetheApple/DiscordMusicBot" target="_blank"><i class="fa-brands fa-github fa-xl" aria-label="github repository link" aria-hidden="true"></i></a>
                         </div>
                         <h4 class="proj_name">Discord Music Bot</h4>
                         A discord music bot built using python (disnake.py) on an already existing base with some added functionality in the form of interactive buttons.
                     </div><!--project 2 end-->
                     <div class="proj proj3">
                         <div class="projlinks">
-                            <a href="" target="_blank"><i class="fa-brands fa-github fa-xl" aria-label="github repository link" aria-hidden="true"></i></a>
+                            <a href="https://github.com/PinetheApple/VC-Robot" target="_blank"><i class="fa-brands fa-github fa-xl" aria-label="github repository link" aria-hidden="true"></i></a>
                         </div>
                         <h4 class="proj_name">Voice Control Application</h4>
                         A simple android application built on MIT App Inventor. Commands can be input by voice or by using touch controls. These are then updated and stored on Firebase.
                     </div><!--project 3 end-->
                     <div class="proj proj4">
                         <div class="projlinks">
-                            <a href="" target="_blank"><i class="fa-brands fa-github fa-xl" aria-label="github repository link" aria-hidden="true" aria-label="github repository link"></i></a>
+                            <a href="https://github.com/PinetheApple/swapi" target="_blank"><i class="fa-brands fa-github fa-xl" aria-label="github repository link" aria-hidden="true" aria-label="github repository link"></i></a>
                         </div>
                         <h4 class="proj_name">Swapi website</h4>
                         A single page web application that uses the Star Wars API (swapi) and generates random star wars characters with some information about them.
